--- a/friends.html
+++ b/friends.html
@@ -22,17 +22,64 @@
           <i class="fas fa-bolt"></i>
         </div>      
     </div>
-   
+
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
-        <div class="screen-header__icons">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
-
-        </div>
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
     </header>
+    <!-- <div id=friends-display-div> -->
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i>
+      Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+  <!-- </div> -->
+  
+  <main class="friends-screen">
+    <div class="user-component">
+      <div class="user-component__column">
+          <img
+            src="https://avatars3.githubusercontent.com/u/3612017"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">hj Kim</h4>
+            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+          </div>
+      </div>   
+      <div class="user-component__column">
+      </div>
+    </div>
+    <div class="friends-screen__channel">
+      <div class="friends-screen__channel-header">
+        <h4 class="user-component__title">Channel</h4>
+        <i class="fas fa-chevron-up fa-xs"></i>
+      </div>
+        <div class="user-component">
+          <div class="user-component__column"> 
+            <img
+              src="https://avatars3.githubusercontent.com/u/3612017"
+              class="user-component__avatar user-component__avatar--sm"/>
+            <div class="user-component__text">
+              <h4 class="user-component__title">Channel</h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>   
+    </div>
+  </main>
 
+  
+    
+
+  </div>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
