--- a/friends.html
+++ b/friends.html
@@ -65,7 +65,11 @@
               src="https://avatars3.githubusercontent.com/u/3612017"
               class="user-component__avatar user-component__avatar--sm"/>
             <div class="user-component__text">
-              <h4 class="user-component__title">Channel</h4>
+              <!--0109-->
+              <!-- <h4 class="user-component__title">Channel</h4> -->
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
             </div>
           </div>
           <div class="user-component__column">
